--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # compiled output
 /dist
 /node_modules
+/mongo-data-4.4
+
+#env
+.env
+docker-compose.yml
 
 # Logs
 logs
@@ -28,6 +33,7 @@ lerna-debug.log*
 *.sublime-workspace
 
 # IDE - VSCode
+.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
